--- a/data-manip.qmd
+++ b/data-manip.qmd
@@ -1,4 +1,4 @@
-# Data Manipulation
+# Data Manipulation {#sec-data-manipulation}
 
 :::{.callout-caution appearance=minimal}
 This section is still under development
