--- a/data-structure.qmd
+++ b/data-structure.qmd
@@ -1,4 +1,4 @@
-# Data Structure
+# Data Structure {#sec-data-structures}
 
 :::{.callout-caution appearance=minimal}
 This section is still under development
