--- a/importing-data.qmd
+++ b/importing-data.qmd
@@ -1,4 +1,4 @@
-# Getting External Data - importing your data into RStudio
+# Getting External Data - importing your data into RStudio {#sec-data_import}
 
 :::{.callout-caution appearance=minimal}
 This section is still under development
