--- a/quarto.qmd
+++ b/quarto.qmd
@@ -1,4 +1,4 @@
-# Introduction to Quarto
+# Introduction to Quarto {#sec-quarto}
 
 :::{.callout-caution appearance=minimal}
 This section is still under development
