--- a/data-types.qmd
+++ b/data-types.qmd
@@ -8,7 +8,6 @@ This section is still under development
 ## Character
 ## Factor
 ## Numerical Data
-## Logical {#set-logic}
+## Logical {#sec-logic}
 ## Objects
 ## Changing Data Types
-
