--- a/edaII.qmd
+++ b/edaII.qmd
@@ -1,4 +1,4 @@
-# Inferential Statistics
+# Inferential Statistics {#sec-infer}
 :::{.callout-caution appearance=minimal}
 This section is still under development
 :::
