--- a/intro-github.qmd
+++ b/intro-github.qmd
@@ -1,4 +1,4 @@
-# Introduction to Git and Github
+# Introduction to Git and Github {#sec-git}
 
 :::{.callout-caution appearance=minimal}
 This section is still under development
