--- a/viz-basic.qmd
+++ b/viz-basic.qmd
@@ -1,4 +1,4 @@
-# Introduction to Data Visualization with ggplot2
+# Introduction to Data Visualization with ggplot2 {#sec-dataviz}
 
 :::{.callout-caution appearance=minimal}
 This section is still under development
